# EZRWS1314

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAssimp.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake  FindOpenGL3.cmake  FindRocket.cmake  FindSOIL.cmake  macros.cmake
ext/include/assimp/: camera.h
ext/lib/unix/: libRocketControls.so.1.2.1  libRocketCore.so.1  libRocketDebugger.so.1
ext/lib/win32/: RocketControls.lib  RocketControls_d.lib  RocketCore.lib  RocketCore_d.lib  RocketDebugger.lib  RocketDebugger_d.lib  SOIL.lib  glfw3.lib  shell_d.lib
prjRocket/: github.txt
resources/assets/textures/: radialGlowMask.tga
resources/scenes/: baum_test.mtl
resources/scenes/blend/: house.blend  house5.blend  house5.blend1  house5.blend2  ocean.blend  ship.blend  ship.blend1  ship.blend2  wagen.blend  wagen.blend1  wagen.blend2
resources/scenes/blend/testing/: even_more_cubes.blend  head.blend  simple_cube.blend
resources/scenes/blender/: even_more_cube.blend  simple_cube.blend  untitled.blend  untitled.blend1  untitled.blend2
resources/scenes/blender/testing/: even_more_cube.blend  even_more_cubes.blend  head.blend
resources/scenes/dae/: baum_test.dae  beach.dae  even_more_cube.dae  even_more_cubes.dae  head.dae  house.dae  house5.dae  ocean.dae  simple_cube.dae  sky.dae  untitled.dae
resources/scenes/fbx/: untitled.fbx
resources/shader/compositing/: compositing.fs.glsl  fullscreen.vs.glsl
resources/shader/forward/: forward.fs.glsl  forward.tesctrl.glsl  forward.teseval.glsl  forward.vs.glsl  ocean.fs.glsl  ocean.geo.glsl  ocean.tesctrl.glsl  ocean.teseval.glsl  ocean.vs.glsl  sky.fs.glsl  sun.fs.glsl  sun.vs.glsl
resources/shader/shadow/: shadowMap.fs.glsl  shadowMap.vs.glsl
resources/shader/testing/: testing.fs.glsl  testing.vs.glsl
resources/shader/ui/: librocket.fs.glsl  librocket.vs.glsl
resources/shader_source/: cel.frag.glsl  cel.vert.glsl  compositing.frag.glsl  final.frag.glsl  glow.frag.glsl  mipMapExtraction.frag.glsl  phong.frag.glsl  phong_fast_mk.frag.glsl  phong_mk.frag.glsl  phong_mk.vert.glsl  post.vert.glsl  radialGlow.frag.glsl  radialGlow.vert.glsl  radialLuminance.frag.glsl  radialLuminance.vert.glsl  separatedBlur.frag.glsl  translucency.frag.glsl  translucency.vert.glsl
resources/textures/: malibou_cross_diffuse.hdr  malibou_left.hdr  radialGlowMask.tga  sun.dds  sun.tga
resources/textures/head/: diffuse.tif
resources/textures/house/dds/: bark-diffuse.dds  goat-tounge.dds  goat_diffuse.dds  ground_diffuse.dds  ground_normal.dds  ground_specular.dds  leaf-diffuse.dds  leaf-translucent.dds  roof-diffuse.dds  roof-normal.dds  roof-specular.dds  sheep_diffuse.dds  sheep_normal.dds  statue_diffuse.dds  statue_normal.dds  statue_specular.dds  statue_translucent.dds  stuff_diffuse.dds  walls-diffuse.dds  walls-normal.dds  walls-specular.dds  water_diffuse.dds
resources/textures/ocean/: water-specular.dds  water_normal.dds
resources/textures/ship/: stuff.tga
resources/textures/sibenik/: floor_marmor.psd
resources/textures/sky/: day.dds  night.dds
resources/textures/test/: cube_diffuse_c00.hdr  cube_diffuse_c01.hdr  cube_diffuse_c02.hdr  cube_diffuse_c03.hdr  cube_diffuse_c04.hdr  cube_diffuse_c05.hdr
resources/ui/: style.rcss  tutorial.rcss  tutorial.rml  window.rml
resources/ui/shaderUI/: mainWindow.rml  navBar.rml  pointer.rml
resources/ui/shaderUI/img/: navigation.tga  pointer.tga  textbox.tga
resources/ui/shaderUI/rcss/: fdc039c8-4bbb-433d-9d67-2d8551c873f4.dmp  mainWindow.rcss  navBar.rcss
resources/ui/shaderUI/templates/: mainWindowT.rml  navBarT.rml
src/: CMakeLists.txt  EZR.cpp  Main.cpp  Tone.cpp
src/post/: CompositingPass.cpp  CompositingPass.h  FinalPass.cpp  FinalPass.h  GlowPass.cpp  GlowPass.h  ISlimRenderPass.cpp  ISlimRenderPass.h  PhongPass.cpp  PhongPass.h  SeparatedBlurPass.cpp  SeparatedBlurPass.h  SeperatedBlurPass.cpp  SeperatedBlurPass.h  SlimFBO.cpp  SlimFBO.h  SlimQuad.cpp  SlimQuad.h  SlimShader.cpp  SlimShader.h
src/post/Sunlight/: RadialGlowMaskPass.cpp  RadialGlowMaskPass.h  RadialLuminancePass.cpp  RadialLuminancePass.h  SeparatedBlurPass.cpp  SeparatedBlurPass.h
src/post/ToneMapping/: CPUExtractionPass.cpp  CPUExtractionPass.h  MipMapExtractionPass.cpp  MipMapExtractionPass.h
src/renderer/: Context.cpp  Context.h  FrameBufferObject.cpp  FrameBufferObject.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h
src/scene/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  SceneManager.cpp  SceneManager.h  SceneNode.cpp  SceneNode.h  Sun.cpp  Sun.h  Transform.cpp  Transform.h
src/ui/: RenderInterfaceOpenGL.cpp  RenderInterfaceOpenGL.h  Shell.cpp  Shell.h  ShellRenderInterfaceOpenGL.cpp  ShellRenderInterfaceOpenGL.h  ShellSystemInterface.cpp  UISystemInterface.cpp  UISystemInterface.h  Userinterface.cpp  Userinterface.h  libRocketGLFW.cpp
src/ui/listeners/: ClickListener.cpp  clicklistener.cpp  clicklistener.h
src/ui/shell/: Input.h  Shell.cpp  Shell.h  ShellSystemInterface.cpp
src/ui/shell/x11/: InputX11.cpp  InputX11.h  ShellX11.cpp
src/utils/: Common.h  FullscreenTriangle.cpp  FullscreenTriangle.h  Importer.cpp  Importer.h  Settings.h
